--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -10,6 +10,9 @@ ECL 1.0:
  - New commands, :RESTART, :R1, :R2, etc, allow invoking restarts (contributed
    by Chui Tey).
 
+ - Interpreted functions can now be disassembled in the debugger. The commands
+   are :D and :DISASSEMBLE.
+
 * Bugs fixed:
 
  - STREAMP signals an error for Gray streams.
