--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -21,6 +21,9 @@ ECL 1.0:
    using SI:SET-FINALIZER and SI:GET-FINALIZER. Only one closure per
    object is allowed.
 
+ - [Win32] Command-line arguments are now available for programs compiled with
+   :SYSTEM set to :WINDOWS (M. Goffioul)
+
 
 * Bugs fixed:
 
@@ -49,6 +52,8 @@ ECL 1.0:
    truename is returned.
 
  - [Win32] DIRECTORY did not take the drive letter into account.
+
+ - [Win32] si_trap_fpe is now exported by ecl.dll
 
 ;;; Local Variables: ***
 ;;; mode:text ***
