--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -139,6 +139,12 @@ ECL 1.0:
 
  - The debugger now prints a list of available restarts.
 
+ - Added restarts to the errors signaled by these functions: SIN, COS, EXP,
+   EXPT, TAN, TANH, SINH, COSH, LOG, ATAN, RATIONAL, NUMERATOR, DENOMINATOR,
+   FLOOR, CEILING, ROUND, TRUNCATE, FLOAT-PRECISION, FLOAT-SIGN, DECODE-FLOAT,
+   SCALE-FLOAT, FLOAT-RADIX, FLOAT-DIGITS, INTEGER-DECODE-FLOAT, REALPART,
+   IMAGPART, COMPLEX.
+
  - C functions which disappear: si_set_compiled_function_name(),
    si_extended_string_concatenate()
 
@@ -149,7 +155,8 @@ ECL 1.0:
    ecl_type_error().
 
  - Functions renamed: backup_fopen() -> ecl_backup_fopen()
-   char_code() -> ecl_char_code()
+   char_code() -> ecl_char_code(), cl_log1() -> ecl_log1(),
+   cl_log2() -> ecl_log2(), NUMBER_TYPE() -> ECL_NUMBER_TYPE_P()
 
 * Contributed code:
 
