--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -139,11 +139,11 @@ ECL 1.0:
 
  - The debugger now prints a list of available restarts.
 
- - Added restarts to the errors signaled by these functions: SIN, COS, EXP,
+ - Added restarts to the errors signaled by several functions: SIN, COS, EXP,
    EXPT, TAN, TANH, SINH, COSH, LOG, ATAN, RATIONAL, NUMERATOR, DENOMINATOR,
    FLOOR, CEILING, ROUND, TRUNCATE, FLOAT-PRECISION, FLOAT-SIGN, DECODE-FLOAT,
    SCALE-FLOAT, FLOAT-RADIX, FLOAT-DIGITS, INTEGER-DECODE-FLOAT, REALPART,
-   IMAGPART, COMPLEX.
+   IMAGPART, COMPLEX, etc
 
  - C functions which disappear: si_set_compiled_function_name(),
    si_extended_string_concatenate()
