--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -146,13 +146,14 @@ ECL 1.0:
    IMAGPART, COMPLEX, etc
 
  - C functions which disappear: si_set_compiled_function_name(),
-   si_extended_string_concatenate()
+   si_extended_string_concatenate(), assert_type_string(),
+   assert_type_character(), assert_type_symbol().
 
  - Lisp functions which disappear: si:set-compiled-function-name,
    si:extended-string-concatenate, si:wrong-type-argument.
 
  - New C functions: ecl_stream_to_handle(), ecl_base_char_code(),
-   ecl_type_error().
+   ecl_type_error(), ecl_check_cl_type(), ecl_check_type_string().
 
  - Functions renamed: backup_fopen() -> ecl_backup_fopen()
    char_code() -> ecl_char_code(), cl_log1() -> ecl_log1(),
