--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -145,8 +145,8 @@ ECL 1.0:
    SCALE-FLOAT, FLOAT-RADIX, FLOAT-DIGITS, INTEGER-DECODE-FLOAT, REALPART,
    IMAGPART, COMPLEX, etc
 
- - DIGIT-CHAR-P will signal an error if the radix is not an integer value
-   between 2 and 36, both included.
+ - DIGIT-CHAR-P and DIGIT-CHAR will signal an error if the radix is not an
+   integer value between 2 and 36, both included.
 
  - C functions which disappear: si_set_compiled_function_name(),
    si_extended_string_concatenate(), assert_type_string(),
