--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -165,7 +165,7 @@ ECL 1.0:
 
  - New C functions: ecl_stream_to_handle(), ecl_base_char_code(),
    ecl_type_error(), ecl_check_cl_type(), ecl_check_type_string(),
-   ecl_fixnum_in_range().
+   ecl_fixnum_in_range(), ecl_stringp().
 
  - New Lisp functions: si:wrong-type-argument.
 
