--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -127,6 +127,8 @@ ECL 1.0:
  - Most functions dealing with sequences (REMOVE, DELETE, etc) would
    output a STRING even if the input was a BASE-STRING.
 
+ - TYPE-OF did not recognized EXTENDED-CHARs.
+
 * Other visible changes:
 
  - EXT:PROCESS-COMMAND-ARGS now allows for a default rule.
@@ -179,7 +181,7 @@ ECL 1.0:
  - New C functions: ecl_stream_to_handle(), ecl_base_char_code(),
    ecl_type_error(), ecl_check_cl_type(), ecl_check_type_string(),
    ecl_fixnum_in_range(), ecl_stringp(), ecl_parse_number(),
-   ecl_parse_integer(), ecl_char(), ecl_char_set().
+   ecl_parse_integer(), ecl_char(), ecl_char_set(), ecl_base_char_p().
 
  - New Lisp functions: si:wrong-type-argument.
 
