--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -157,6 +157,9 @@ ECL 1.0:
  - If the homedir component contains a tilde itself, ECL entered an infinite
    loop when expanding the pathname
 
+ - Now it should be possible to load the same FASL files multiple times,
+   even if previous instances have not completely garbage collected.
+
 * Unicode:
 
  - MAKE-STRING only allowed :ELEMENT-TYPE to be one of CHARACTER, BASE-CHAR, or
