Remove trailing slashes in directories to keep MINGW's compiler happy

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -58,6 +58,9 @@ ECL 1.0:
 
 * Bugs fixed:
 
+ - MINGW's compiler is broken: it does not accept directories with trailing
+   slashes as an argument to "-I". We include a hack in cmpmain.lsp for that.
+
  - STREAMP signals an error for Gray streams.
 
  - ENOUGH-NAMESTRING provided too large directory names (Contributed by Tim S)
