--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -42,6 +42,8 @@ ECL 0.9k:
  - ECL formerly accepted spaces between the comma and the @ and . characters
    in expressions like ,@ or ,.
 
+ - Building a statically linked ECL works again.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
