--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -39,6 +39,8 @@ ECL 0.9k:
    collisions between files compiled on different machines. In short: you should
    only worry if you regularly use the function C::BUILD.
 
+ - Improved hashing of unicode strings.
+
 * CLOS:
 
  - When caching generic function calls, ECL now uses a thread-local hash table
