--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -41,6 +41,8 @@ ECL 0.9k:
 
  - Improved hashing of unicode strings.
 
+ - ECL ships with ASDF v1.111
+
 * CLOS:
 
  - When caching generic function calls, ECL now uses a thread-local hash table
