--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -60,6 +60,9 @@ ECL 0.9k:
  - Equal random states now compare properly under EQUALP and their hash keys
    are also equal.
 
+ - Problems in the use of "volatile" keywords prevented ECL from compiling
+   with a C++ compiler.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
