Only use 64 bits intel assembler when compiler supports it

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -66,6 +66,9 @@ ECL 0.9k:
  - The reader function for #\ was not suitable for being invoked by the
    user on an arbitrary stream.
 
+ - ECL tried to use intel-64bits assembler on 64 bits processors, even though
+   compiler and the operating system work with 32bits.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
